Fix layout issue
Added a width property to container elements so that they always take
100% of the width. This was done so that the container elements take the
full width on smaller resolutions.

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header {
   width: 100%;
   background-color: #e4f1fe;
   color: #22313f;
+  border-bottom: 2px solid #22313f;
 }
 
 header > nav > ul {
@@ -49,6 +50,7 @@ header > nav > ul {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   gap: 50px;
   font-size: 1.25rem;
 }
@@ -56,10 +58,6 @@ header > nav > ul {
 header > nav > ul > li > a {
   text-decoration: none;
   color: #22313f;
-}
-
-header > nav > ul > li > a:hover {
-  font-weight: bold;
 }
 
 header > nav > ul > li:nth-child(1) {
@@ -79,14 +77,16 @@ header > nav > ul > li:nth-child(1) {
 }
 
 .hero {
+  width: 100%;
   padding: 50px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  overflow-wrap: break-word;
   background-color: #62a9f1;
   color: #22313f;
-  border-top: 2px solid #22313f;
 }
 
 .hero > h1 {
@@ -99,7 +99,8 @@ header > nav > ul > li:nth-child(1) {
 }
 
 .products {
-  padding: 15px;
+  width: 100%;
+  padding: 50px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
@@ -156,11 +157,12 @@ header > nav > ul > li:nth-child(1) {
 }
 
 footer {
-  padding: 20px;
+  padding: 5px;
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  font-size: 0.75rem;
   text-align: center;
   background-color: #34495e;
   color: #e4f1fe;
